<resources>
    <string name="app_name">MathParadise</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hintuporabniskoime"><font size="21">Uporabniško ime</font></string>
    <string name="hintgeslo"><font size="21">Geslo</font></string>
    <string name="hintime"><font size="21">Ime</font></string>
    <string name="hintpriimek"><font size="21">Priimek</font></string>
    <string name="hintemail"><font size="21">Email naslov</font></string>

</resources>